--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,42 @@
-/* TODO Add site wide styles */
+html, body {
+    position: absolute;
+    background-color: #eee;
+    margin: 0;
+    height: 100%;
+    width: 100%;
+}
+
+#root {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+}
+
+#game-area {
+    display: grid;
+    grid-template-columns: repeat(3, 60vw);
+    grid-template-rows: repeat(3, 40vw);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+}
+
+#board {
+    display: grid;
+    grid-template-columns: repeat(8, 5vw);
+    grid-template-rows: repeat(8, 5vw);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+}
+
+.dark-square {
+    background-color: black;
+    width: 100%;
+    height: 100%;
+}
+
+.light-square {
+    background-color: red;
+    width: 100%;
+    height: 100%;
+}
