--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,18 +13,26 @@ html, body {
     margin: 0;
 }
 
+#app-wrapper {
+    display: flex;
+    background-color:green;
+    width: 100%;
+    height: 100%;
+}
+
 #game-area {
     display: grid;
-    grid-template-columns: repeat(3, 60vw);
-    grid-template-rows: repeat(3, 40vw);
+    grid-template-columns: repeat(3, 100vw);
+    grid-template-rows: repeat(3, 100vh);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
 }
 
 #board {
+    grid-area: 1 / 1 / 4 / 3;
     display: grid;
-    grid-template-columns: repeat(8, 5vw);
-    grid-template-rows: repeat(8, 5vw);
+    grid-template-columns: repeat(8, 4vw);
+    grid-template-rows: repeat(8, 4vw);
     grid-column-gap: 0px;
     grid-row-gap: 0px;
 }
