--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,6 +5,7 @@ html, body {
     height: 100%;
     width: 100%;
     caret-color: transparent;
+    /* cursor: url(./img/queen_black.png), auto; */
 }
 
 #root {
