--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -30,8 +30,48 @@ html, body {
     justify-content: center;
 }
 
+#board-area {
+    display: grid;
+}
+
+#clock-area {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    width: 20vw;
+    height: 100%;
+
+}
+
+.clock-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: gray;
+    width: 100%;
+    height: 6.25vw;
+    margin: 20px;
+}
+
+.clock-face {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #373b41;
+    width: 92%;
+    height: 92%;
+    color: white;
+}
+
+.time {
+    font-family: 'Orbitron', sans-serif;
+}
+
 #board {
-    grid-area: 1 / 1 / 4 / 3;
     display: grid;
     grid-template-columns: repeat(8, 6.25vw);
     grid-template-rows: repeat(8, 6.25vw);
